Fixed collapse bug in header

--- a/cafesys/baljan/static/sass/parts/modules/hamburgers/_base.scss
+++ b/cafesys/baljan/static/sass/parts/modules/hamburgers/_base.scss
@@ -72,3 +72,10 @@
     bottom: ($hamburger-layer-spacing + $hamburger-layer-height) * -1;
   }
 }
+
+// Avoid collapsing vertical menu on large screens
+@include media-breakpoint-up(lg) {
+  .navbar-collapse {
+    height: inherit !important;
+  }
+}
